; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_GetFileNameFromFilePathW.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_GetFileNameFromFilePathW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GetFileNameFromFilePathW(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %14 = load i32, i32* @MAX_SIZE, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %7, align 8
  %17 = alloca i32, i64 %15, align 16
  store i64 %15, i64* %8, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = load i32*, i32** %6, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %20, %3
  store i32 1, i32* %12, align 4
  br label %58

24:                                               ; preds = %20
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @UniStrLen(i32* %25)
  %27 = load i32, i32* @MAX_SIZE, align 4
  %28 = sub nsw i32 %27, 2
  %29 = call i64 @MIN(i32 %26, i32 %28)
  store i64 %29, i64* %10, align 8
  store i64 0, i64* %11, align 8
  store i64 0, i64* %9, align 8
  br label %30

30:                                               ; preds = %51, %24
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* %10, align 8
  %33 = add i64 %32, 1
  %34 = icmp ult i64 %31, %33
  br i1 %34, label %35, label %54

35:                                               ; preds = %30
  %36 = load i32*, i32** %6, align 8
  %37 = load i64, i64* %9, align 8
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  %39 = load i32, i32* %38, align 4
  store i32 %39, i32* %13, align 4
  %40 = load i32, i32* %13, align 4
  switch i32 %40, label %44 [
    i32 92, label %41
    i32 47, label %41
    i32 0, label %41
  ]

41:                                               ; preds = %35, %35, %35
  %42 = load i64, i64* %11, align 8
  %43 = getelementptr inbounds i32, i32* %17, i64 %42
  store i32 0, i32* %43, align 4
  store i64 0, i64* %11, align 8
  br label %50

44:                                               ; preds = %35
  %45 = load i32, i32* %13, align 4
  %46 = load i64, i64* %11, align 8
  %47 = getelementptr inbounds i32, i32* %17, i64 %46
  store i32 %45, i32* %47, align 4
  %48 = load i64, i64* %11, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %11, align 8
  br label %50

50:                                               ; preds = %44, %41
  br label %51

51:                                               ; preds = %50
  %52 = load i64, i64* %9, align 8
  %53 = add i64 %52, 1
  store i64 %53, i64* %9, align 8
  br label %30

54:                                               ; preds = %30
  %55 = load i32*, i32** %4, align 8
  %56 = load i64, i64* %5, align 8
  %57 = call i32 @UniStrCpy(i32* %55, i64 %56, i32* %17)
  store i32 0, i32* %12, align 4
  br label %58

58:                                               ; preds = %54, %23
  %59 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %59)
  %60 = load i32, i32* %12, align 4
  switch i32 %60, label %62 [
    i32 0, label %61
    i32 1, label %61
  ]

61:                                               ; preds = %58, %58
  ret void

62:                                               ; preds = %58
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @MIN(i32, i32) #2

declare dso_local i32 @UniStrLen(i32*) #2

declare dso_local i32 @UniStrCpy(i32*, i64, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
